--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.18.3",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
+    "mongodb": "^3.1.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
